# MediaPlayer-e131

./: .gitignore  DEVELOPMENT.md  MediaPlayer.code-workspace  QUICKSTART-WINDOWS.md  README.md  SACN-TESTING.md  StagePlayer DMX_0.1.0_x64_en-US.msi  StagePlayer DMX_0.1.0_x86_en-US.msi  StagePlayer DMX_1.1.0_x86_en-US.msi  WINDOWS-TROUBLESHOOTING.md  index.html  output-css-drag-failed.html  output-data-drag-region-backup.html  output-old-backup.html  output.html  package-lock.json  package.json  setup-dev.bat  setup-firewall.ps1  test-sacn-loopback.ps1  test-sacn.ps1  vite.config.ts
PRD/: Specs.rtf  sACN_Video_Playback_PRD.docx  sACN_Video_Playback_PRD.md
public/: output.html
src/: App.css  App.tsx  output.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/permissions/commands/: default.toml
src-tauri/src/: config.rs  main-backup.rs  main-fixed.rs  main.rs  media_scanner.rs  sacn_listener.rs  sacn_test_sender.rs
src/components/: DmxMonitor.tsx  MonitorConfigPanel.tsx  PreviewPanel.tsx
