[package]
name = "mediaplayer-e131"
version = "0.1.0"
description = "sACN Video Playback Engine with dual monitor support"
authors = ["Brad Boyink"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sacn = "0.11"
log = "0.4"
env_logger = "0.11"
get_if_addrs = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Windows-specific optimizations
[profile.release.package."*"]
opt-level = 3

# Optimize for Windows target
[target.'cfg(windows)'.profile.release]
opt-level = 3
